authentication system started

--- a/ui/layout/exception/lThrowException.html.twig
+++ b/ui/layout/exception/lThrowException.html.twig
@@ -1,5 +1,7 @@
 {% extends "lBase.html.twig" %}
 
+{% block title %} Page inexistante{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="cell-12">
