--- a/ui/css/common.css
+++ b/ui/css/common.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: "Billy";
+    src: url('../fonts/Billy Ohio.ttf');
+}
+
+@font-face {
+    font-family: "Caviar";
+    src: url('../fonts/CaviarDreams.ttf');
+}
+
 .ckeContent img {
     max-width: 100%;
     height: auto
@@ -12,4 +22,31 @@
     overflow-wrap: break-word;
     word-break: break-all;
     word-break: break-word;
+}
+
+.liSeparator {
+    padding-right: 15px;
+    border-right: 2px solid #2c3e50;
+}
+
+.containerLinkCarrot a:hover, a.linkCarrot:hover {
+    color: #e67e22;
+}
+
+.jumbo {
+    background-image: url('../media/image/jumbo.jpeg');
+    /* Création de l'effet "parallax" */
+    height: 300px;
+    background-attachment: fixed;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.fontBilly {
+    font-family: "Billy", serif;
+}
+
+.fontCaviar {
+    font-family: "Caviar", serif;
 }
