--- a/ui/css/libraries/hover.css
+++ b/ui/css/libraries/hover.css
@@ -2261,7 +2261,7 @@
     left: 50%;
     right: 50%;
     bottom: 0;
-    background: #2098D1;
+    background: #2c3e50;
     height: 4px;
     -webkit-transition-property: left, right;
     transition-property: left, right;
