--- a/ui/view/image/vOneImage.html.twig
+++ b/ui/view/image/vOneImage.html.twig
@@ -15,9 +15,8 @@
         <div class="cell-12 align-center">
             <a class="color-orange marg-15-right" href="index.php?o=image&a=update&id={{ image.id }}"
                title="Modifier cet image">Modifier</a>
-            <a class="color-error marg-15-right" href="index.php?o=image&a=delete&id={{ image.id }}"
+            <a class="color-error" href="index.php?o=image&a=delete&id={{ image.id }}"
                title="Supprimer cet image">Supprimer</a>
-            <a href="index.php?a=listAll&o=image" title="Retour vers la liste des images">Retour</a>
         </div>
     </div>
     <div class="row">
