authentification twig functions

--- a/app/MagicMonkey/Framework/ui/layout/lUserConnection.html.twig
+++ b/app/MagicMonkey/Framework/ui/layout/lUserConnection.html.twig
@@ -1,5 +1,5 @@
-<form class="form" method="post" action="{{ app.request.getBaseURL() }}">
-    <div class="groupform-compact marg-auto bg-opac-white-9 padd-15-left padd-15 border-bottom-7px border-midnight-blue">
+<form class="form" method="post" action="{{ getCurrentUrl() }}">
+    <div class="groupform-compact marg-auto bg-opac-white-9 padd-15 border-bottom-7px border-midnight-blue">
         <label class="required" for="loginConnection">Identifiant</label>
         <input class="marg-15-right" type="text" id="loginConnection" name="loginConnection" required maxlength="25"/>
         <label class="required" for="passwordConnection">Mot de passe</label>
