--- a/app/MagicMonkey/Framework/ui/view/vUserRegistration.html.twig
+++ b/app/MagicMonkey/Framework/ui/view/vUserRegistration.html.twig
@@ -25,7 +25,7 @@
                 <div class="groupform-large">
                     <label class="required" for="password">Mot de passe</label>
                     {{ userForm.showMsg('password')|raw }}
-                    <input class="padd-15" type="text" maxlength="25" name="password"
+                    <input class="padd-15" type="password" maxlength="25" name="password"
                            id="passw" required
                            placeholder="pas 123456 svp, plutôt j93dR${Y"/>
                 </div>
