--- a/ui/css/common.css
+++ b/ui/css/common.css
@@ -29,6 +29,10 @@
     border-right: 2px solid #2c3e50;
 }
 
+.containerLinkMidnight a:hover, a.linkMidnight:hover {
+    color: #2c3e50;
+}
+
 .containerLinkCarrot a:hover, a.linkCarrot:hover {
     color: #e67e22;
 }
