ajax delete article ok

--- a/app/MagicMonkey/Framework/ui/layout/lUserConnection.html.twig
+++ b/app/MagicMonkey/Framework/ui/layout/lUserConnection.html.twig
@@ -1,9 +1,29 @@
-<form class="form" method="post" action="{{ getCurrentUrl() }}">
-    <div class="groupform-compact marg-auto bg-opac-white-9 padd-15 border-bottom-7px border-midnight-blue">
-        <label class="required" for="loginConnection">Identifiant</label>
-        <input class="marg-15-right" type="text" id="loginConnection" name="loginConnection" required maxlength="25"/>
-        <label class="required" for="passwordConnection">Mot de passe</label>
-        <input class="marg-15-right" type="password" id="passwordConnection" name="passwordConnection" required/>
-        <input type="submit" value="Valider" class="bg-midnight-blue color-yang border-none padd-10"/>
-    </div>
-</form>
+<div class="cell-12 hide-s">
+    <form class="form" method="post" action="{{ getCurrentUrl() }}">
+        <div class="groupform-compact marg-auto bg-opac-white-9 padd-15 border-bottom-7px border-midnight-blue">
+            <label class="required" for="loginConnection">Identifiant</label>
+            <input class="marg-15-right" type="text" id="loginConnection" name="loginConnection" required
+                   maxlength="25"/>
+            <label class="required" for="passwordConnection">Mot de passe</label>
+            <input class="marg-15-right" type="password" id="passwordConnection" name="passwordConnection" required/>
+            <input type="submit" value="Valider" class="bg-midnight-blue color-yang border-none padd-10"/>
+        </div>
+    </form>
+</div>
+
+<div class="cell-12 hide show-s">
+    <form class="form" method="post" action="{{ getCurrentUrl() }}">
+        <div class="groupform-large hide">
+            <label class="required" for="loginConnection">Identifiant</label>
+            <input type="text" id="loginConnection" name="loginConnection" required
+                   maxlength="25"/>
+        </div>
+        <div class="groupform-large">
+            <label class="required" for="passwordConnection">Mot de passe</label>
+            <input type="password" id="passwordConnection" name="passwordConnection" required/>
+        </div>
+        <div class="groupform-actions">
+            <input type="submit" value="Valider" class="bg-midnight-blue color-yang border-none padd-10"/>
+        </div>
+    </form>
+</div>
