--- a/ui/layout/lBase.html.twig
+++ b/ui/layout/lBase.html.twig
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="ui/css/libraries/hover.css" type="text/css">
     <link rel="stylesheet" href="ui/css/libraries/MagicMonkeyCSS.min.css" type="text/css">
     <link rel="stylesheet" href="ui/css/common.css" type="text/css">
+    <link rel="stylesheet" href="ui/css/modules/burger.css" type="text/css">
     {% block css %}{% endblock %}
 
     <!-- JS-->
@@ -26,14 +27,16 @@
 {% include 'lHeader.html.twig' %}
 
 <!--BODY START-->
-<main class="mw marg-auto padd-15-top-bottom-xs">
-    <div class="row-col-s">
-        <div class="cell-12">
-            {{ flashAll|raw ?: "" }}
-            {% block content %}{% endblock %}
+<div class="site-wrap">
+    <main class="mw marg-auto padd-15-top-bottom-xs">
+        <div class="row-col-s">
+            <div class="cell-12">
+                {{ flashAll|raw ?: "" }}
+                {% block content %}{% endblock %}
+            </div>
         </div>
-    </div>
-</main>
+    </main>
+</div>
 
 <!--FOOTER START-->
 {% include 'lFooter.html.twig' %}
