--- a/ui/view/article/vOneArticle.html.twig
+++ b/ui/view/article/vOneArticle.html.twig
@@ -16,7 +16,7 @@
             <div class="cell-12 align-center">
                 <a class="color-orange marg-15-right" href="index.php?a=update&id={{ article.id }}"
                    title="Modifier cet article">Modifier</a>
-                <a class="color-error" href="index.php?a=delete&id={{ article.id }}"
+                <a class="color-error marg-15-right" href="index.php?a=delete&id={{ article.id }}"
                    title="Supprimer cet article">Supprimer</a>
             </div>
         </div>
