--- a/ui/layout/lBase.html.twig
+++ b/ui/layout/lBase.html.twig
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Mini Framework PHP">
-    <meta name="author" content="Habit Jérémy">
+    <meta name="DC.Title" content="Mini Journal">
+    <meta name="DC.Creator" content="Habit Jérémy">
+    <meta name="DC.Subject" content="Articles et images">
+    <meta name="DC.Description" content="Site pour réaliser un mini framework php">
     <link rel="icon" type="image/x-icon" href="ui/media/favicon.png"/>
+
+    {% block metaFB %}{% endblock %}
+
     <title>{% block title %}{% endblock %} - Mini Framework</title>
 
     <!-- CSS -->
