--- a/ui/view/article/vOneArticle.html.twig
+++ b/ui/view/article/vOneArticle.html.twig
@@ -1,5 +1,17 @@
 {% extends "lBase.html.twig" %}
 
+
+
+{% block metaFB %}
+    <meta property="og:type" content="article">
+    <meta property="og:title" content={{ article.title }}>
+    <meta property="og:site_name" content="Mini-journal">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="article:published_time" content="{{ article.publicationDate }}">
+    <meta property="article:author" content="{{ article.content }}">
+{% endblock %}
+
 {% block title %}Détails d'un article{% endblock %}
 
 {% block content %}
