preparation pour examen version 2

--- a/ui/view/article/vFormNewUpdate.html.twig
+++ b/ui/view/article/vFormNewUpdate.html.twig
@@ -21,13 +21,13 @@
         <div class="cell-12">
             <form class="form required" action="index.php?a={{ action }}&o=article" method="post">
                 <!-- author -->
-                <div class="groupform-large">
+               {# <div class="groupform-large">
                     <label class="required" for="author">Auteur</label>
                     {{ articleForm.showMsg('author')|raw }}
                     <input class="padd-15" type="text" name="author" id="author" required placeholder="un auteur"
                            maxlength="255"
                            value="{{ article.author }}"/>
-                </div>
+                </div>#}
                 <!-- title -->
                 <div class="groupform-large">
                     <label class="required" for="title">Titre</label>
