--- a/ui/layout/lHeader.html.twig
+++ b/ui/layout/lHeader.html.twig
@@ -1,9 +1,8 @@
 <header>
-    {% include 'lBurger.html.twig' %}
     <div class="row-col-s jumbo align-center-s">
         <div class="cell-9 hide-s">
             <a href="index.php" class="color-yang fontBilly" title="Vers l'accueil">
-                <span class="txt-sizeXXL">Mini Journal</span><br class="hide-s">
+                <span class="txt-sizeXXL">Mini Journal version 2</span><br class="hide-s">
                 <span class="hide-s fontCaviar">{ Projet pour réaliser un mini framework php }</span>
             </a>
         </div>
@@ -11,11 +10,11 @@
             <a class="linkCarrot bg-opac-6 color-yang padd-15 padd-10-s" href="index.php?o=user&a=registration"
                title="S'inscrire">Inscription</a>
         </div>
-        {% if sessionUser %}
+        {% if isLoggedUser() %}
             <div class="cell-12 align-center">
                 <span class="color-midnight-blue bg-opac-white-9 padd-15 border-bottom-7px border-midnight-blue dis-inblock txt-sizeL">
-                    {{ sessionUser['name'] }}
-                    {{ sessionUser['first_name'] }}
+                    {{ isLoggedUser()['name'] }}
+                    {{ isLoggedUser()['first_name'] }}
                 </span>
                 <div>
                     <a href="index.php?o=auth&a=logout" class="color-error" title="Se déconnecter">Déconnexion</a>
@@ -30,32 +29,33 @@
         <div class="cell-12">
             <ul class="list-unstyled list-inline containerLinkMidnight">
                 <li>
-                    <a href="index.php" title="Lien vers la liste des articles">Liste des articles</a>
+                    <a href="index.php" title="Lien vers la liste des articles publiés">Articles publiés</a>
                 </li>
+                {% if isLoggedUser() %}
+                    <li>
+                        <a href="index.php?o=article&a=nonPublies" title="Lien vers la liste des articles non publiés">Articles
+                            non publiés</a>
+                    </li>
+                {% endif %}
                 <li>
-                    <a href="index.php?a=insert&o=article" title="Lien vers le formulaire pour ajouter un article">
-                        Ajouter un article</a>
+                    <a href="index.php?a=listAll&o=image" title="Lien vers la liste des images">Liste des images</a>
                 </li>
-                <li class="liSeparator">
-                    <a href="index.php?a=delete&o=article" title="Lien vers le formulaire pour supprimer un article">
-                        Supprimer un article</a>
-                </li>
-                <li>
-                    <a href="index.php?a=listAll&o=image" title="Lien vers la liste des images">Liste des images</a
-                </li>
-                <li>
-                    <a href="index.php?a=insert&o=image"
-                       title="Lien vers le formulaire pour ajouter un image">Ajouter un image</a>
-                </li>
-                <li class="liSeparator">
-                    <a href="index.php?a=delete&o=image"
-                       title="Lien vers le formulaire pour supprimer un image">Supprimer une image</a>
-                </li>
+                {% if isLoggedUser() %}
+                    <li>
+                        <a href="index.php?a=insert&o=article" title="Lien vers le formulaire pour ajouter un article">
+                            Ajouter un article</a>
+                    </li>
+                    <li>
+                        <a href="index.php?a=insert&o=image"
+                           title="Lien vers le formulaire pour ajouter un image">Ajouter un image</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a href="index.php?o=page&a=about" title="A propos">
                         <span>A propos</span>
                     </a>
                 </li>
+            </ul>
         </div>
     </div>
 </header>
