--- a/ui/view/article/vAllArticles.html.twig
+++ b/ui/view/article/vAllArticles.html.twig
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="row">
         <div id="contentNotification" class="cell-12">
-            <h1 class="align-center">Liste des articles</h1>
+            <h1 class="align-center">Liste des articles {{ endH1 }}</h1>
         </div>
     </div>
     <div class="row-col-s">
@@ -20,11 +20,13 @@
                 <div class="cell-4 c6-m box-shad-2px">
                     <a class="align-center box-shad-2px padd-15 dis-block"
                        href="index.php?o=article&a=describe&id={{ article.id }}">{{ article.title }}</a>
-                    <a class="color-error pos-abs-right-center marg-15-right deleteArticle" href="#"
-                       data-id="{{ article.id }}"
-                       title="Supprimer cet article">
-                        <img src="ui/media/icon_logo/x-mark-5-24.png" alt="Icône de suppression"/>
-                    </a>
+                    {% if article.publicationStatus == "brouillon" %}
+                        <a class="color-error pos-abs-right-center marg-15-right deleteArticle" href="#"
+                           data-id="{{ article.id }}"
+                           title="Supprimer cet article">
+                            <img src="ui/media/icon_logo/x-mark-5-24.png" alt="Icône de suppression"/>
+                        </a>
+                    {% endif %}
                 </div>
             {% endfor %}
         {% else %}
