--- a/ui/view/page/vAbout.html.twig
+++ b/ui/view/page/vAbout.html.twig
@@ -20,6 +20,29 @@
         </div>
     </div>
     <div class="row">
+        <div class="cell-12 table-scroll">
+            <h2>Comptes</h2>
+            <table class="table-odd table-cell-fluid table-border">
+                <thead>
+                <tr>
+                    <th>Login</th>
+                    <th>mdp</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>editor</td>
+                    <td>editor</td>
+                </tr>
+                <tr>
+                    <td>admin</td>
+                    <td>admin</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="row">
         <div class="cell-12">
             <h2>Fonctionnalités demandées</h2>
             <p>L'architecture et les fonctionnalités correspondent à ce qui est demandé pour le devoir n°1 plus les
@@ -27,27 +50,27 @@
             <ul class="txt-over-breakline">
                 <li class="marg-15-bottom">
                     <span class="txt-b">association d'image(s) à un article</span>
-                    <span class="msg-success marg-15-top">Fait avec possibilité de choisir l'ordre en déplacant les images</span>
+                    <span class="msg-success marg-15-top">Fait ( possibilité de choisir l'ordre en déplacant les images via sortable.js )</span>
                 </li>
                 <li class="marg-15-bottom">
                     <span class="txt-b">authentification des utilisateurs</span>
-                    <span class="msg-success marg-15-top">Fait. Aucun commentaire</span>
+                    <span class="msg-success marg-15-top">Fait</span>
                 </li>
                 <li class="marg-15-bottom">
                     <span class="txt-b">gestion des droits d'accès</span>
-                    <span class="msg-warning marg-15-top">A compléter. gestion des droits d'accès pour les images </span>
+                    <span class="msg-warning marg-15-top">mais pas de séparation entre ce qui provient du framework ou du minijournal ...A compléter. gestion des droits d'accès pour les images </span>
                 </li>
                 <li class="marg-15-bottom">
                     <span class="txt-b">suppression d'un article en AJAX</span>
-                    <span class="msg-success marg-15-top">Fait. Aucun commentaire</span>
+                    <span class="msg-success marg-15-top">Fait ( bouton rouge/croix blanche sur la liste des articles )</span>
                 </li>
                 <li class="marg-15-bottom">
                     <span class="txt-b">publication/brouillon d'un article en AJAX</span>
-                    <span class="msg-warning marg-15-top">Fait mais pas pertinent ? redirection  ? demander à JML</span>
+                    <span class="msg-success marg-15-top">Fait (disponible uniquement pour un admin sur le détail d'un article )</span>
                 </li>
                 <li class="marg-15-bottom">
                     <span class="txt-b">insertion des métadonnées dans les pages (Open Graph Protocol, Twitter Cards, Dublin Core et Microdata)</span>
-                    <span class="msg-error marg-15-top">Non Fait</span>
+                    <span class="msg-error marg-15-top">Pas totalement</span>
                 </li>
             </ul>
         </div>
